--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h3 class="STARDUST3">Q u y e n <strong>❤</strong> S u</h3>
       <img class="img" src="em.png" alt="JUNO_OKYO" />
       <canvas id="pinkboard"></canvas>
-      <h4 class="STARDUST4" style="text-align: justify;" >Chúc mừng anh đã giữ được em 3 tháng. <br>
+      <h4 class="STARDUST4" style="text-align: justify; padding: 20px;" >Chúc mừng anh đã giữ được em 3 tháng. <br>
         Cảm ơn em vì đã ở bên cạnh anh. Chắc quen em lâu dần nên anh cũng không nghĩ ra được mấy câu sến súa để nói nữa rồi <br>
         Trong tháng này anh đã làm em khóc 1 lần, anh xin lỗi. Anh không dám chắc là mình sẽ đi được cùng nhau được bao lâu, <br>
         nhưng anh chắc chắn khi em ở bên cạnh anh, anh sẽ làm cho em hạnh phúc nhất, cười như con điên mỗi ngày &#128518 <br>
